# email-newsletter

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  heroku.yml  sqlx-data.json
.github/workflows/: deploy.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20220619171052_create_subscriptions_table.sql  20220808135919_make_status_not_null_in_subscriptions.sql  20220808140654_create_subscription_tokens_table.sql
scripts/: init_db.bat  init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
